Initial commit with project files

--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
 
     <div class="weather-info">
       <h2 id="cityName">City</h2>
+      <img id="weatherIcon" alt="Weather Icon" />
       <p id="temperature">Temperature: -- °C</p>
       <p id="description">Condition: --</p>
+      <p id="humidity">Humidity: --%</p>
+      <p id="wind">Wind Speed: -- m/s</p>
     </div>
+
+    <h3>5-Day Forecast</h3>
+    <div id="forecast" class="forecast-container"></div>
   </div>
 
   <script src="script.js"></script>
