--- a/index.html
+++ b/index.html
@@ -3,29 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Weather Dashboard</title>
+  <title>Lively Weather App</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>Weather Dashboard</h1>
+
+  <div class="app">
+    <h1>🌤 Weather Dashboard</h1>
+    <button id="themeToggle" class="theme-btn">🌙 Dark Mode</button>
 
     <div class="search-box">
       <input type="text" id="cityInput" placeholder="Enter city name..." />
       <button id="searchBtn">Search</button>
     </div>
 
-    <div class="weather-info">
+    <div class="weather-card">
       <h2 id="cityName">City</h2>
-      <img id="weatherIcon" alt="Weather Icon" />
-      <p id="temperature">Temperature: -- °C</p>
-      <p id="description">Condition: --</p>
+      <img id="weatherIcon" />
+      <h3 id="temperature">--°C</h3>
+      <p id="description">Condition</p>
       <p id="humidity">Humidity: --%</p>
-      <p id="wind">Wind Speed: -- m/s</p>
+      <p id="wind">Wind: -- m/s</p>
     </div>
 
-    <h3>5-Day Forecast</h3>
-    <div id="forecast" class="forecast-container"></div>
+    <h3 class="forecast-title">5-Day Forecast</h3>
+    <div id="forecast" class="forecast"></div>
   </div>
 
   <script src="script.js"></script>
